# battery-hawk

./: .bumpversion.toml  .copier-answers.yml  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  .talismanrc  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  lint_output.txt  pyproject.toml
.augment/rules/: rule-code-style.md
.roo/rules/: taskmaster.md
.taskmaster/: config.json  state.json
.taskmaster/docs/research/: 2025-07-18_bm6-battery-monitor-actual-implementation-from-jef.md  2025-07-18_bm6-battery-monitor-ble-protocol-implementation-ch.md
.taskmaster/tasks/: tasks.json
development_notes/: CLI_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_UPDATES_SUMMARY.md  TODO.md  code-review-improvements.md  coding-style.md  implement-bm6.md
docs/: API.md  CLI.md  DEPLOYMENT.md  DOCKER.md  DOCKER_QUICK_REFERENCE.md  LOGGING.md  TROUBLESHOOTING.md  api.rst  battery-hawk-prd.md  developer-notes.md  index.rst  mqtt_publisher.md  mqtt_resilience.md
examples/: api_integration_example.py  auto_configuration_example.py  cli_examples.sh  complete_api_example.py  device_api_example.py  docker_custom_ports.sh  error_handling_demo.py  influxdb_demo.py  mqtt_event_handler_example.py  mqtt_publisher_example.py  mqtt_resilience_example.py  retention_policy_demo.py  storage_backends_demo.py  test_logging_config.py  vehicle_api_example.py
local-instance/data/: devices.json  system.json  vehicles.json
local-instance/mosquitto/config/: mosquitto.conf
nginx/: nginx.conf
run_scripts/: start_module.sh
src/battery_hawk/: __init__.py  __main__.py  cli.py  cli_mqtt.py
src/battery_hawk/api/: __init__.py  api.py  constants.py  devices.py  documentation.py  middleware.py  readings.py  schemas.py  system.py  validation.py  vehicles.py
src/battery_hawk/config/: __init__.py  config_manager.py
src/battery_hawk/core/: __init__.py  auto_config.py  auto_config_rules.py  engine.py  registry.py  state.py  storage.py  storage_backends.py  storage_backends_examples.py
src/battery_hawk/mqtt/: __init__.py  client.py  service.py  topics.py
src/battery_hawk_driver/: __init__.py
src/battery_hawk_driver/base/: __init__.py  ble_base.py  connection.py  device_factory.py  discovery.py  error_handler.py  protocol.py  retry.py  state.py
src/battery_hawk_driver/bm2/: __init__.py  bm2_error_handler.py  constants.py  device.py  exceptions.py  parser.py  protocol.py
src/battery_hawk_driver/bm6/: __init__.py  bm6_error_handler.py  constants.py  crypto.py  device.py  exceptions.py  parser.py  protocol.py
src/homeassistant_battery_hawk/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_api_devices.py  test_api_readings.py  test_api_system.py  test_api_validation.py  test_api_vehicles.py  test_auto_configuration.py  test_battery_hawk_core.py  test_ble_connection_pool.py  test_ble_discovery.py  test_ble_manager.py  test_bm2_exceptions.py  test_bm2_parser.py  test_bm2_protocol.py  test_bm6_device_integration.py  test_bm6_exceptions.py  test_bm6_parser.py  test_bm6_protocol.py  test_bm6_real_protocol.py  test_cli_connect.py  test_cli_scan.py  test_config_manager.py  test_connection_state_management.py  test_device_factory_integration.py  test_device_state_manager.py  test_error_handler.py  test_influxdb_storage.py  test_main.py  test_mqtt.py  test_mqtt_event_handler.py  test_mqtt_integration.py  test_mqtt_publisher.py  test_mqtt_resilience.py  test_mqtt_topics.py  test_performance_benchmarks.py  test_protocol.py  test_retry.py  test_state.py  (+2 more)
tests/support/fixtures/: __init__.py  test_sample_data.py
tests/support/mocks/: __init__.py  test_mock_ble_devices.py
utils/: get_soc.bash  get_soc_mqtt.bash  scan_bm.bash
